k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rtdlm
  labels:
    app.kubernetes.io/name: rtdlm
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
